# epeios.bak

./: .hgignore  CLI.xcfg  NOTES.md  README.md  TOL.xcfg  XDH.xcfg  XDHScripts.xcfg
apps/: FRD.xcfg  XDH.xcfg
apps/esketch/: CHANGELOG.txt  Project.xml  README.md  TODO.md  sktfbc.cpp  sktfbc.h  sktinf.cpp  sktinf.h
apps/mmuaq/: CHANGELOG.txt  Makefile  Project.xml  README.txt  TODO.txt  muafbc.cpp  muafbc.h  muainf.cpp  muainf.h
apps/orgnzq/: CHANGELOG.txt  Makefile  Project.xml  README.txt  ogzfbc.cpp  ogzfbc.h  ogzinf.cpp  ogzinf.h
apps/taskq/: CHANGELOG.md  README.md  tskfbc.cpp  tskfbc.h  tskinf.cpp  tskinf.h
apps/xdhdq/: CHANGELOG.md  CHANGELOG.txt  Project.xml  README.md  README.txt  TODO.md  xddfbc.cpp  xddfbc.h  xddinf.cpp  xddinf.h
apps/xdhdq.old/: xddfbc.cpp  xddfbc.h  xddinf.h
corpus/: README.md  clnarg.xlcl  epeios.xcfg  epeios.xlcl  fbl.xlcl  fblovl.xlcl  fil.xlcl  frd.xlcl  frdkrn.xlcl  msc.xlcl  mscmdd.xlcl  mscrmi.xlcl  n4aups.xlcl  nsxpcm.xlcl  plgn.xlcl  prxy.xlcl  q37.xpp  rgstry.xlcl  scl.xlcl  scla.xlcl  sclargmnt.xlcl  sclb.xlcl  sclbacknd.xlcl  scld.xlcl  scldaemon.xlcl  sclf.xlcl  sclfrntnd.xlcl  scll.xlcl  scllocale.xlcl  sclm.xlcl  sclmisc.xlcl  sclp.xlcl  sclplugin.xlcl  sclr.xlcl  sclrgstry.xlcl  sclt.xlcl  scltool.xlcl  sclx.xlcl  sclxdhtml.xlcl  sclxhtml.xlcl  (+8 more)
corpus/JS/: NOTES.md  xdhtml.js
corpus/js/: xdhtml.js
devel/: CHANGELOG.OLD.txt  CHANGELOG.md  CHANGELOG.txt  TODO.md  TODO.txt
devel/aem/: aem.cpp  aem.h  aem_test.cpp
devel/ags/: ags.cpp  ags.h  ags_test.cpp
devel/bch/: bch.cpp  bch.h  bch_test.cpp
devel/bfl/: bfl.cpp  bfl.h  bfl_test.cpp
devel/bitbch/: bitbch.cpp  bitbch.h  bitbch_test.cpp
devel/bomhdl/: bomhdl.cpp  bomhdl.h  bomhdl_test.cpp
devel/bso/: bso.cpp  bso.h  bso_test.cpp
devel/btr/: btr.cpp  btr.h  btr_test.cpp
devel/cdgb64/: cdgb64.cpp  cdgb64.h  cdgb64_test.cpp
devel/cdgurl/: cdgurl.cpp  cdgurl.h  cdgurl_test.cpp
devel/cgigat/: cgigat.cpp  cgigat.h  cgigat_test.cpp
devel/cgimng/: cgimng.cpp  cgimng.h  cgimng_test.cpp
devel/cio/: cio.cpp  cio.h  cio_test.cpp
devel/clnarg/: clnarg.cpp  clnarg.h  clnarg_test.cpp
devel/cnvfdr/: cnvfdr.cpp  cnvfdr.h  cnvfdr_test.cpp
devel/cpe/: cpe.cpp  cpe.h  cpe_test.cpp
devel/crptgr/: crptgr.cpp  crptgr.h  crptgr_test.cpp
devel/crt/: crt.cpp  crt.h  crt_test.cpp
devel/csdbnc/: csdbnc.cpp  csdbnc.h  csdbnc_test.cpp
devel/csdbns/: csdbns.cpp  csdbns.h  csdbns_test.cpp
devel/csdcmn/: csdcmn.cpp  csdcmn.h  csdcmn_test.cpp
devel/csdlec/: csdlec.cpp  csdlec.h  csdlec_test.cpp
devel/csdleo/: csdleo.cpp  csdleo.h  csdleo_test.cpp
devel/csdles/: csdles.cpp  csdles.h  csdles_test.cpp
devel/csdmnb/: csdmnb.cpp  csdmnb.h  csdmnb_test.cpp
devel/csdmnc/: csdmnc.cpp  csdmnc.h  csdmnc_test.cpp
devel/csdmns/: csdmns.cpp  csdmns.h  csdmns_test.cpp
devel/csdmxb/: csdmxb.cpp  csdmxb.h  csdmxb_test.cpp
devel/csdmxc/: csdmxc.cpp  csdmxc.h  csdmxc_test.cpp
devel/csdmxs/: csdmxs.cpp  csdmxs.h  csdmxs_test.cpp
devel/csdrcc/: csdrcc.cpp  csdrcc.h  csdrcc_test.cpp
devel/csdrcd/: csdrcd.cpp  csdrcd.h  csdrcd_test.cpp
devel/csdrcu/: csdrcu.cpp  csdrcu.h  csdrcu_test.cpp
devel/csdrmc/: csdrmc.cpp  csdrmc.h  csdrmc_test.cpp
devel/csdscb/: csdscb.cpp  csdscb.h  csdscb_test.cpp
devel/csdsnc/: csdsnc.cpp  csdsnc.h  (+1 more)
stable/: EpeiosActivity.java  aem.cpp  aem.h  ags.cpp  ags.h  amm.cpp  amm.h  bch.cpp  bch.h  bfl.cpp  bfl.h  bitbch.cpp  bitbch.h  bkdacc.cpp  bkdacc.h  bkdcmd.cpp  bkdcmd.h  bkdcst.cpp  bkdcst.h  bkddcb.cpp  bkddcb.h  bkddsc.cpp  bkddsc.h  bkdlac.cpp  bkdlac.h  bkdlcl.cpp  bkdlcl.h  bkdlrm.cpp  bkdlrm.h  bkdmng.cpp  bkdmng.h  bkdrac.cpp  bkdrac.h  bkdrpl.cpp  bkdrpl.h  bkdrqm.cpp  bkdrqm.h  bkdrrm.cpp  bkdrrm.h  bkdtpm.cpp  (+683 more)
tools/: TOL.xcfg  XDH.xcfg
tools/xdhdvkq/app/: CMakeLists.txt
tools/xdhdvkq/app/src/main/assets/WebView/: README.txt  xdhdvkq.html  xdhdvkq.js
tools/xdhdvkq/app/src/main/cpp/: xdhdvkq.cpp
tools/xdhdvkq/app/src/main/java/info/q37/xdhdvkq/: MainActivity.java
(+3702 files in other folders)
